QPrintDialog on macOS: Don't crash when parent is not a window

The test case is an incomplete version of the test that will be added to
verify the fix for the referenced bug report. The test crashes already
when showing the dialog without this fix.

Task-number: QTBUG-116277
Change-Id: I969a723157f6453b78bafae5cb24a6b37b1eea50
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit e73f35d9c63378ed26e33f488a3ee5bb0745e9d5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>